[gd_scene load_steps=3 format=2]

[ext_resource path="res://zqf_entity_editor/zee_edit_tags_panel.gd" type="Script" id=1]
[ext_resource path="res://zqf/zqf_mouse_entered.gd" type="Script" id=2]

[node name="zee_edit_tags_panel" type="Control"]
anchor_right = 0.2
anchor_bottom = 0.989
margin_bottom = 7.91998
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zee_edit_tags_panel" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="zee_edit_tags_panel"]
margin_right = 256.0
margin_bottom = 14.0
text = "Edit Tags"

[node name="Label2" type="Label" parent="zee_edit_tags_panel"]
margin_top = 18.0
margin_right = 256.0
margin_bottom = 32.0
text = "Message"

[node name="LineEdit" type="LineEdit" parent="zee_edit_tags_panel"]
margin_top = 36.0
margin_right = 256.0
margin_bottom = 60.0

[node name="Label5" type="Label" parent="zee_edit_tags_panel"]
margin_top = 64.0
margin_right = 256.0
margin_bottom = 78.0
text = "Add new tag"

[node name="add_tag" type="HBoxContainer" parent="zee_edit_tags_panel"]
margin_top = 82.0
margin_right = 256.0
margin_bottom = 106.0
alignment = 1

[node name="LineEdit" type="LineEdit" parent="zee_edit_tags_panel/add_tag"]
margin_left = 11.0
margin_right = 203.0
margin_bottom = 24.0
rect_min_size = Vector2( 192, 0 )

[node name="Button" type="Button" parent="zee_edit_tags_panel/add_tag"]
margin_left = 207.0
margin_right = 244.0
margin_bottom = 24.0
text = "Add"

[node name="Label3" type="Label" parent="zee_edit_tags_panel"]
margin_top = 110.0
margin_right = 256.0
margin_bottom = 124.0
text = "Current Tags"

[node name="current_tags" type="VBoxContainer" parent="zee_edit_tags_panel"]
margin_top = 128.0
margin_right = 256.0
margin_bottom = 128.0

[node name="Label4" type="Label" parent="zee_edit_tags_panel"]
margin_top = 132.0
margin_right = 256.0
margin_bottom = 146.0
text = "Available Tags"

[node name="available_tags" type="VBoxContainer" parent="zee_edit_tags_panel"]
margin_top = 150.0
margin_right = 256.0
margin_bottom = 150.0

[node name="mouse_entered" type="Node" parent="."]
script = ExtResource( 2 )
